# embedded-db

./: .gitignore  Cargo.toml  README.md  TODO.md
.cargo/: config.toml
src/: codec.rs  db.rs  flash.rs  kv.rs  lib.rs  main.rs
tests/: integration.rs
